# amc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format-check.yml  codeql-analysis.yml  macos.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  sets_benchmark.cpp  vectors_benchmark.cpp
cmake/: amcConfig.cmake.in
include/amc/: algorithm.hpp  allocator.hpp  config.hpp  fixedcapacityvector.hpp  flatset.hpp  hasreallocate.hpp  isdetected.hpp  istransparent.hpp  memory.hpp  smallset.hpp  smallvector.hpp  type_traits.hpp  utility.hpp  vector.hpp  vectorcommon.hpp
src/benchmark/: CMakeLists.txt  benchhelpers.hpp  sets_benchmark.cpp  vectors_benchmark.cpp
src/include/: amc_allocator.hpp  amc_config.hpp  amc_fixedcapacityvector.hpp  amc_flatset.hpp  amc_isdetected.hpp  amc_memory.hpp  amc_smallset.hpp  amc_smallvector.hpp  amc_type_traits.hpp  amc_utility.hpp  amc_vector.hpp  amc_vectorcommon.hpp
src/test/: CMakeLists.txt  amc_isdetected_test.cpp  sets_test.cpp  testhelpers.hpp  testtypes.hpp  vectors_test.cpp
test/: CMakeLists.txt  amc_isdetected_test.cpp  sets_test.cpp  testtypes.hpp  vectors_test.cpp
